--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     	console.log(selectedFile)
     	let fr = new FileReader();
     	fr.onload = function(event) {
-    	console.log(event.target.result);
+    	//console.log(event.target.result);
     	output.value = event.target.result
     	output.focus();
     	output.select();
